--- a/julia_tutorial.ipynb
+++ b/julia_tutorial.ipynb
@@ -2046,6 +2046,507 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions\n",
+    "- 함수 정의\n",
+    "- duck-typing\n",
+    "- mutating vs. non-mutating\n",
+    "- higer order functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "f (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function sayhi(name)\n",
+    "    println(\"Hi $name, it's great to see you!\")\n",
+    "end\n",
+    "\n",
+    "function f(x)\n",
+    "    x^2\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi lalajin, it's great to see you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "sayhi(\"lalajin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2500"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi lalajin, it's great to see you!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2500"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sayhi2(name) = println(\"Hi $name, it's great to see you!\")\n",
+    "\n",
+    "f2(x) = x^2\n",
+    "\n",
+    "sayhi2(\"lalajin\")\n",
+    "f2(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi lalajinjin, it's great to see you!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1600"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sayhi3 = name -> println(\"Hi $name, it's great to see you!\")\n",
+    "f3 = x -> x^2\n",
+    "\n",
+    "sayhi3(\"lalajinjin\")\n",
+    "f3(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi 324035, it's great to see you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# duck-tying?\n",
+    "sayhi(324035)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Array{Float64,2}:\n",
+       " 0.827162  1.33412   0.587192\n",
+       " 0.401704  0.858897  0.23807\n",
+       " 1.4556    2.06867   1.21029"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = rand(3, 3)\n",
+    "A\n",
+    "f(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"hihi\""
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(\"hi\") # string 도 동일하게 처리할 수 있다\n",
+    "# f(*) * 에는 스트링 인풋도 넣을 수 있기 때문이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Float64,1}:\n",
+       " 0.24647542401119082\n",
+       " 0.9578910766840092\n",
+       " 0.10789635247449358"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 하지만 f() 함수는 벡터에 사용할 수 없다\n",
+    "v = rand(3)\n",
+    "#f(v) ? 에러남"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 2\n",
+       " 3\n",
+       " 5"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mutating vs non mutating\n",
+    "# ! 를 사용하는 여부에 따라서 어떤 차이가 있을까?\n",
+    "v = [3, 5, 2]\n",
+    "sort(v) # 해당 결과물을 바꾸지만, 원래 v 를 바꾸지 않음\n",
+    "#in_place = False 느낌\n",
+    "v\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 2\n",
+       " 3\n",
+       " 5"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort!(v) # 원래 v 까지 바꾸어버림, in_place = True\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 다른 여러 상위 함수\n",
+    "# map "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 1\n",
+       " 4\n",
+       " 9"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(f, [1,2,3]) # f 라는 함수에 각각을 넣은 결과를 내보낸다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       "   1\n",
+       "   4\n",
+       " 900"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[f(1), f(2), f(30)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       "  1\n",
+       "  8\n",
+       " 27"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map(x -> x^3, [1,2,3]) # 이렇게 함수 식 만들지 않고 직접 진행도 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 1\n",
+       " 4\n",
+       " 9"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# broadcast\n",
+    "broadcast(f, [1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       " 1\n",
+       " 4\n",
+       " 9"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.([1,2,3]) \n",
+    "#broadcast 의 기능을 사용하여 . 점을 찍고 결과물을 얻을 수 있다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#  f([1,2,3]) 작동안됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Array{Int64,2}:\n",
+       " 1  2  3\n",
+       " 4  5  6\n",
+       " 7  8  9"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [i + 3 *j for j in 0:2, i in 1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Array{Int64,2}:\n",
+       "  1   4   9\n",
+       " 16  25  36\n",
+       " 49  64  81"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = f.(A)\n",
+    "B"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
